# QuadrocopterSystem

./: .gitignore  LICENSE  README.md
Model/: identification.m  identification.mlx  model.py  pyproject.toml
Simulink/: Controller.slx.original  Model.slx  Model.slxc  control_drone.slx  controller.slx  controller.slx.autosave  model_params.asv  model_params.m  roll.mat  test.m  test.slx  test_esc.slx  test_esc.slx.r2024b  test_mpu6050.elf  test_mpu6050.slx  test_mpu6050.slxc
closed_loop_identification/: Manifest.toml  Project.toml  Thumbs.db  main.py  plot_data_roll1.csv.csv  plot_data_roll2.csv.csv  plot_data_roll3.csv.csv  plot_data_yaw2.csv.csv  plot_data_yaw3.csv.csv  pyproject.toml
controller/: .gitignore
controller_3dof_container/: CMakeLists.txt  controller_3dof_container.cpp  controller_3dof_container.h  controller_3dof_container_data.cpp  rtwtypes.h
docs/: Thumbs.db  ideen_pid.txt  install.md  quadrocopter_usage.md  simulink_embedded_coder.md  simulink_models.md
evaluation_recordings/: lqr_xy.csv  pid_3axis.csv  pid_all.csv  pid_pitch_1.42-1.21-0.35_throttle_3_mse2.96.csv  pid_roll_1.4-1.18-0.33_throttle3_mse3.01.csv  pid_xz.csv  pid_yaw.csv  pid_yaw_2.8-2.5-0.51_throttle_3_mse4.53.csv  pitch_lqr.csv  roll_closed_identified.csv
ground_station/: pyproject.toml
ground_station/recordings/: debug_plot.m  log_20260204_172606_Sine.csv  log_20260210_141438_Sine.csv  log_20260213_182054_Sine.csv  log_20260213_182132_Sine.csv  log_20260219_120037_Sine.csv
ground_station/src/: com.py  gui.py  helpers.py  main.py  plot_recording_file.py  plots.py  telemetry_data.py  telemetry_handler.py
identification/: ident_rotor_coeffs.ipynb  ident_rotor_coeffs_alternating_least_squares.ipynb  identification.ipynb  identification_inertia.ipynb  identification_rotor_coeffs.ipynb  monitor_drone.py  pyproject.toml
identification/measurements_roll/: measurements_roll_12N_0.2Nm.csv
linearization/: main.py  pyproject.toml
model/: KalmanFilter.slx  analyse.m  control_alloc.slx  controller_3dof.slx  controller_3dof.slx.autosave  controller_3dof_24.slx  controller_3dof_container.slx  controller_6dof.slx  controller_6dof_container.slx  ident_model_3dof_closed_loop.m  kalman_position.slx  lqr_3dof.slx  lqr_position.slx  model_1dof.slx  model_3dof.slx  model_3dof_24.slx  model_6dof.slx  params.asv  params.m  (+19 more)
python/: model.py  pyproject.toml
read_lt_api_dynamic_python/: LaserTrackerInterfaceDocument.chm  README.md  main.py  pyproject.toml  test_api.py  tracker_example.ipynb
src/components/controller_3dof_container/: CMakeLists.txt  controller_3dof_container.cpp  controller_3dof_container.h  controller_3dof_container_data.cpp  rtwtypes.h
(+284 files in other folders)
