[tool.poetry]
name = "drone-model"
version = "0.1.0"
description = ""
authors = ["Maximilian Schweiger <76230998+maxschwe@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
