[project]
name = "read-lt-api-dynamic-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "api-lasertracker",
]

[tool.uv.sources]
api-lasertracker = { path = "api_lasertracker-7.17.1.0-cp314-cp314-win_amd64.whl" }
